# diseq

./: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  bibliography.bib  cleanup  configure.ac  cran-comments.md
.github/workflows/: check-release.yml  check-standard.yaml  pkgdown.yaml
R/: cpp_derivatives_fiml.R  cpp_eq_fiml.R  cpp_system_fiml.R  data.R  derivatives_basic.R  derivatives_deterministic_adjustment.R  derivatives_directional.R  derivatives_fiml.R  derivatives_stochastic_adjustment.R  diseq.R  diseq_base.R  diseq_basic.R  diseq_deterministic_adjustment.R  diseq_directional.R  diseq_stochastic_adjustment.R  disequilibrium_model.R  eq_2sls.R  eq_base.R  eq_fiml.R  equation_base.R  equation_basic.R  equation_deterministic_adjustment.R  equation_directional.R  equation_stochastic_adjustment.R  equilibrium_model.R  fitted_model.R  gradient_basic.R  gradient_deterministic_adjustment.R  gradient_directional.R  gradient_diseq_deterministic_adjustment.R  gradient_equilibrium.R  gradient_equilibrium_model.R  gradient_stochastic_adjustment.R  hessian_basic.R  hessian_directional.R  likelihood_basic.R  likelihood_deterministic_adjustment.R  likelihood_directional.R  likelihood_diseq_deterministic_adjustment.R  likelihood_equilibrium.R  (+16 more)
data/: houses.rda
inst/: CITATION  WORDLIST
man/: aggregate_demand.Rd  aggregate_supply.Rd  coef.Rd  cpp_eq_fiml-class.Rd  demand_descriptives.Rd  demanded_quantities.Rd  diseq.Rd  diseq_base-class.Rd  diseq_basic-class.Rd  diseq_deterministic_adjustment-class.Rd  diseq_directional-class.Rd  diseq_stochastic_adjustment-class.Rd  disequilibrium_model-class.Rd  eq_2sls-class.Rd  eq_base-class.Rd  eq_fiml-class.Rd  equation_base-class.Rd  equation_basic-class.Rd  equation_classes.Rd  equation_deterministic_adjustment-class.Rd  equation_directional-class.Rd  equation_stochastic_adjustment-class.Rd  equilibrium_model-class.Rd  estimate.Rd  formula-market_model-method.Rd  get_aggregate_demand.Rd  get_aggregate_supply.Rd  get_correlation_variable.Rd  get_demand_descriptives.Rd  get_demanded_quantities.Rd  get_estimated_demanded_quantities.Rd  get_estimated_shortage_indices.Rd  get_estimated_supplied_quantities.Rd  get_marginal_effect_at_mean.Rd  get_mean_marginal_effect.Rd  get_model_description.Rd  get_normalized_shortages.Rd  get_number_of_observations.Rd  get_prefixed_const_variable.Rd  get_prefixed_control_variables.Rd  (+54 more)
pkgdown/: extra.css
rsc/: build.org  design.drawio  implementation.drawio  logo.drawio  logo.xcf  readme_figures.py
src/: .gitignore  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  compile_commands.json  cpp_fiml.cpp  equilibrium.cpp  gsl_fiml.cpp
tests/: testthat.R
tests/testthat/: helper-common.R  test-2sls.R  test-basic.R  test-cpp_fiml.R  test-deterministic_adjustment.R  test-directional.R  test-eq2sls.R  test-equilibrium.R  test-fiml.R  test-stochastic_adjustment.R  test-style.R
vignettes/: .install_extras  basic_usage.Rmd  diseq.Rnw  equilibrium_assessment.Rmd  market_clearing_assessment.Rmd  model_details.Rmd  package.Rmd
